# archicad-mcp

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml  release.yml  schema-sync.yml
docs/: ai-friction-points.md  ai-pain-points.md  dynamic-context-plan.md  get-properties-tool-design.md  mcp-friction-audit-2026-02.md  schema-sync-automation.md  surface-assignment-pr-plan.md  surface-assignment-technical-spec.md  tapir-invalid-elementtype-pr.md  tapir-slab-level-bug.md  tapir-unit-documentation.md  tapir-upstream-issues.md  tool-discovery-improvements.md
src/archicad_mcp/: __init__.py  config.py  models.py  server.py
src/archicad_mcp/core/: __init__.py  connection.py  errors.py  manager.py  properties.py
src/archicad_mcp/schemas/: __init__.py  builtin.json  cache.py  docgen.py  search.py  tapir.json
src/archicad_mcp/scripting/: __init__.py  api.py  executor.py
tests/: __init__.py
tests/integration/: __init__.py  test_server_integration.py
tests/mock/: __init__.py  test_connection.py  test_manager.py
tests/unit/: test_config.py  test_errors.py  test_executor.py  test_models.py  test_properties.py  test_safe_open.py  test_schema_cache.py
