[project]
name = "archicad-mcp"
version = "0.1.0"
description = "MCP server for Archicad automation via the Model Context Protocol"
readme = "README.md"
license = "MIT"
authors = [{ name = "Botond Ormandi" }]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "openpyxl>=3.1.0",
    "rapidfuzz>=3.0.0",
]

[project.urls]
Repository = "https://github.com/Boti-Ormandi/archicad-mcp"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aioresponses>=0.7.0",
    "ruff>=0.15.0",
    "mypy>=1.19.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
archicad-mcp = "archicad_mcp.server:main"
archicad-mcp-sync = "archicad_mcp.schemas.cache:sync_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# =============================================================================
# Ruff - Linting & Formatting
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez (timezone aware)
    "T20",    # flake8-print (no print statements)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (formatter handles this)
]

[tool.ruff.lint.isort]
known-first-party = ["archicad_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# MyPy - Type Checking
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["aiohttp.*", "aioresponses.*", "mcp.*", "openpyxl.*", "rapidfuzz.*"]
ignore_missing_imports = true

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring real Archicad instance",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
